--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -1,8 +1,8 @@
-pandas
+pandas==2.2.3
 scikit-learn==1.3.0
-nltk
-numpy
-joblib
-tqdm
-transformers
-torch
+nltk==3.9.1
+numpy==1.26.4
+joblib==1.4.2
+tqdm==4.66.5
+transformers==4.44.2
+torch==2.2.2
