--- a/inference/requirements.txt
+++ b/inference/requirements.txt
@@ -1,5 +1,7 @@
-flask
-nltk
-numpy
-joblib
-gunicorn
+flask==3.0.3
+nltk==3.9.1
+numpy==1.26.4
+joblib==1.4.2
+gunicorn==23.0.0
+flask-limiter==4.1.0
+scikit-learn==1.3.0
