Remove full path from docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      - /home/branch/projects/toxictext-scanner/inference:/app
+      - ./inference:/app
