--- a/inference/requirements.txt
+++ b/inference/requirements.txt
@@ -4,5 +4,7 @@ numpy==1.26.4
 joblib==1.4.2
 gunicorn==23.0.0
 flask-limiter==3.8.0
-scikit-learn==1.3.0
+scikit-learn==1.5.1
 langdetect==1.0.9
+googletrans==3.1.0a0
+stanza==1.10.0
